[package]
name = "racs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "rust client library for RACS"
repository = "https://github.com/racslabs/rust-racs"
readme = "README.md"
keywords = ["audio", "audio-cache"]

[dependencies]
rmp = "0.8.14"
num-complex = "0.4"
mur3 = "0.1"
crc32c = "0.6"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.42"
